@@ -391,6 +391,7 @@ current
            even more when used with etpub >= 0.9.0
 * tijmen:  added custom voicechats, which can also be disables clientside
            with cg_customVoiceChats
-* terifire:added cg_damageKick for controling the damage kick, check docs.           TODO: Should be limited by the server.
-* elf:     added cg_tracers
+* quad:    added cg_damageKick for controling the damage kick, check docs.           TODO: Should be limited by the server. by Terifire
+* quad:    added cg_tracers by Elf Friend
 * quad:    added GeoIP country flags in scoreboard, made by mcwf.
+* quad:    added dropweapon command by Terifire
