@@ -249,6 +249,9 @@ votefttext CANNOT be disabled</p>
 <dd>Dumps the current hud settings to the console in format used
 to create a .hud file</dd>
 
+<dt>dropweapon</dt>
+<dd>Drops the player's primary weapon.</dd>
+
 </dl>
 
 <hr>
